--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div> -->
       
       <div class="bio-body" style="overflow:hidden;">
-        <p>
+        <p style="text-align: justify;">
           The Epistemic Intelligence & Computation (EPIC) Lab, led by <a href="https://chau999.github.io/">Prof. Siu Lun Chau</a>, is dedicated to understanding the underlying principles to develop uncertainty-aware intelligent systems that can recognise and communicate the limits of their knowledge. Specifically, we ask <em>how should epistemic uncertainty be mathematically <strong>represented, quantified, evaluated, compared, and explained?</strong></em> To achieve that, our research spans a variety of topics between machine learning and statistical methodologies, including:
         </p>
         <ul>
