--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@
             <img src="image/team/yuqi.png" alt="Yuqi Zhang" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin-bottom: 15px;">
           </div>
           <h4>Yuqi Zhang</h4>
-          <p class="member-role">PhD Student @ HKU</p>
+          <p class="member-role">PhD Student @ HKU (main supervisor Prof Edwin Fong @ HKU)</p>
           <p class="member-research">Topics: Uncertainty-aware Causal Inference</p>
           <div class="member-links">
             <!-- <a href="#" class="small-link"><i class="fa fa-envelope"></i></a> -->
