--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ permalink: /index
     }
 
     .logo-row img {
-        height: 80px; /* set a consistent logo height */
+        height: 60px; /* set a consistent logo height */
         width: auto;
         display: block;
     }
@@ -75,15 +75,15 @@ permalink: /index
             </p>
             <ul>
                 <li>
-                    <markorange><strong>Mathematical Foundations of Epistemic Uncertainty</strong></markorange>
-                    : We study the mathematical and statistical
+                    <markorange><strong>Mathematical Foundations of Epistemic Uncertainty:</strong></markorange>
+                    We study the mathematical and statistical
                     principles governing knowledge-level uncertainty, including representation (e.g. distributions v.s.
                     sets), quantification (e.g. information-theoretic v.s. discrepency-based), comparisons (e.g.
                     probability metrics), verification (e.g. statistical tests) of epistemic uncertainty.
                 </li>
                 <li>
-                    <markblue><strong>Algorithms for Epistemic Uncertainty-Aware Learning</strong></markblue>
-                    : We develope machine learning algorithms that
+                    <markblue><strong>Algorithms for Epistemic Uncertainty-Aware Learning:</strong></markblue>
+                    We develope machine learning algorithms that
                     can reason about, propagate, and communicate epistemic uncertainty in prediction (e.g. Gaussian
                     process, neural networks, conformal framework), inference (e.g. causal inference), and
                     decision-making (e.g. active learning, Bayesian optimisation).
