--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@ permalink: /index
             </div>
         </div>
 
+        <br>
+        <div class="logo-row">
+            <img src="assets/image/logo/EPIC_Lab_Logo.png" alt="EPIC Lab Logo">
+            <img src="assets/image/logo/CCDS_logo.png" alt="CCDS Logo">
+            <img src="assets/image/logo/NTU_Logo.png" alt="NTU Logo">
+        </div>
+        <br>
+
         <div class="bio-body">
             <p style="text-align: justify;">
                 The Epistemic Intelligence & Computation (EPIC) Lab is dedicated to advancing the principles necessary
@@ -124,29 +132,24 @@ permalink: /index
             of error bars.</p>
     </div>
     <p style="text-align: justify;">
-        If any of this resonates with you, feel free to reach out for collaboration. We are always excited to hear from you.
+        If any of this resonates with you, feel free to reach out for collaboration. We are always excited to hear from
+        you.
     </p>
 
 </div>
 </div>
 
-<br>
-<div class="logo-row">
-    <img src="assets/image/logo/EPIC_Lab_Logo.png" alt="EPIC Lab Logo">
-    <img src="assets/image/logo/CCDS_logo.png" alt="CCDS Logo">
-    <img src="assets/image/logo/NTU_Logo.png" alt="NTU Logo">
-</div>
-<br>
-<div class="wrapper">
-    <div>
-        <p style="text-align: justify;">
-            The EPIC Lab is currently affiliated with the <a href="https://www.ntu.edu.sg/computing/">College of
-            Computing and Data Science, Nanyang Technological
-            University</a> in Singapore. The lab maintains strong research ties with international collaborators across
-            the United Kingdom, the Netherlands, Germany, Hong Kong, Japan, and Australia.
-        </p>
-    </div>
-</div>
+
+<!--<div class="wrapper">-->
+<!--    <div>-->
+<!--        <p style="text-align: justify;">-->
+<!--            The EPIC Lab is currently affiliated with the <a href="https://www.ntu.edu.sg/computing/">College of-->
+<!--            Computing and Data Science, Nanyang Technological-->
+<!--            University</a> in Singapore. The lab maintains strong research ties with international collaborators across-->
+<!--            the United Kingdom, the Netherlands, Germany, Hong Kong, Japan, and Australia.-->
+<!--        </p>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 <div class="wrapper">
